# burner-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  update.yml
data/: domains.txt  services.json
scripts/: sync_packages.py
src/burner_radar/: cli.py  collector.py  fingerprint.py  seeds.py  sources.py  validate.py
