[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "burner-radar"
version = "0.1.0"
description = "Continuously-updated database of disposable email domains."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Manav Doshi" }]
dependencies = [
    "dnspython>=2.6",
    "requests>=2.31",
]

[project.scripts]
burner-radar = "burner_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
